--- a/app/src/main/res/layout/route_info_dialog.xml
+++ b/app/src/main/res/layout/route_info_dialog.xml
@@ -5,42 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
-    android:orientation="vertical">
-
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Назва"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused" />
-
-    <TextView
-        android:id="@+id/route_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/dialog_ok_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Ok" />
-
-        <Button
-            android:id="@+id/dialog_edit_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Edit" />
-    </LinearLayout>
-
-
-</LinearLayout>
+    android:orientation="vertical"/>
