--- a/app/src/main/res/layout/route_info_dialog.xml
+++ b/app/src/main/res/layout/route_info_dialog.xml
@@ -5,4 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
-    android:orientation="vertical"/>
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/route_inform_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:text="Название роута"
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:id="@+id/route_inform_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Количество пасажиров" />
+
+        <EditText
+            android:id="@+id/route_inform_passangers"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="1" />
+
+        <EditText
+            android:id="@+id/route_inform_commnet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="start|top"
+            android:hint="Введите окмментарий водителю"
+            android:inputType="textMultiLine" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/route_inform_controls"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"></LinearLayout>
+
+</LinearLayout>
