add route controls

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
@@ -16,6 +14,11 @@
         tools:context=".MapActivity"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-54dp" />
+
+
+    <include
+        android:id="@+id/include1"
+        layout="@layout/route_controls_fragment" />
 
     <LinearLayout
         android:id="@+id/inform_layout"
@@ -30,7 +33,7 @@
 
     <LinearLayout
         android:id="@+id/route_layout"
-        android:layout_width="60dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,6 +45,27 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent">
 
-</android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+
+
+    <ViewFlipper
+        android:id="@+id/vf"
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
+        android:padding="4dp"
+        app:behavior_hideable="false"
+        app:behavior_peekHeight="56dp"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+        >
+
+        <include
+            android:id="@+id/include1"
+            layout="@layout/menu_route_view" />
+
+    </ViewFlipper>
+
+
+
+</android.support.design.widget.CoordinatorLayout>
