--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00ADFF</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#F8BEBE</color>
+    <color name="colorPrimaryDark">#FFC107</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#fff</color>
+    <color name="black">#000</color>
 </resources>
