--- a/app/src/main/res/layout/menu_route_view.xml
+++ b/app/src/main/res/layout/menu_route_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        style="@style/informBg"
+        style="@style/bottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
