--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#F8BEBE</color>
     <color name="colorPrimaryDark">#FFC107</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="grey">#ECECEC</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
 </resources>
