--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/grey</item>
     </style>
 
     <style name="NoActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -12,10 +13,40 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="btnLarge" parent="Theme.AppCompat">
+        <item name="android:textColor">#000</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="colorButtonNormal">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="label1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="fieldLabel" >
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:textColor">#BEBDBD</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="fieldInput" parent="TextAppearance.AppCompat">
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:background">@drawable/edit_text_field_bg</item>
+    </style>
+
+    <style name="fieldHint" >
+        <item name="android:padding">2dp</item>
+        <item name="android:textColor">#BEBDBD</item>
+    </style>
 
 
 
-    <style name="informBg" parent="Theme.AppCompat.Light">
+    <style name="routeListItem" parent="Theme.AppCompat.Light">
         <item name="cardCornerRadius">5dp</item>
         <item name="cardElevation">2dp</item>
         <item name="contentPadding">10dp</item>
@@ -23,6 +54,29 @@
         <item name="contentPaddingLeft">15dp</item>
         <item name="cardBackgroundColor">@color/white</item>
     </style>
+
+
+
+    <style name="bottomSheet" parent="Theme.AppCompat.Light">
+        <item name="cardCornerRadius">5dp</item>
+        <item name="cardElevation">2dp</item>
+        <item name="contentPadding">10dp</item>
+        <item name="contentPaddingTop">8dp</item>
+        <item name="contentPaddingLeft">15dp</item>
+        <item name="cardBackgroundColor">@color/grey</item>
+    </style>
+
+
+
+
+
+
+
+
+
+
+
+
 
     <style name="informLabels" parent="Theme.AppCompat.Light">
         <item name="android:textColor">#000</item>
