--- a/app/src/main/res/layout/fragment_driver_routes_list.xml
+++ b/app/src/main/res/layout/fragment_driver_routes_list.xml
@@ -13,6 +13,12 @@
         android:layout_height="match_parent">
 
 
+
+        <ListView
+            android:id="@+id/routes_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
+
         <LinearLayout
             android:id="@+id/no_routes_layout"
             android:layout_width="match_parent"
@@ -38,105 +44,6 @@
                 android:layout_height="wrap_content"
                 android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
                 android:textAlignment="center" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.CardView
-                style="@style/routeListItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
-
-
-                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Киев - Велики Васюки"
-                        android:theme="@style/label1" />
-
-                    <Button
-                        android:id="@+id/button5"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_alignParentRight="true"
-                        android:background="@drawable/btn_radio_shape" />
-
-                </RelativeLayout>
-
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                style="@style/routeListItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
-
-
-                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Киев - Велики Васюки"
-                        android:theme="@style/label1" />
-
-                    <Button
-                        android:id="@+id/button5"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_alignParentRight="true"
-                        android:background="@drawable/btn_radio_shape_checked" />
-
-                </RelativeLayout>
-
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                style="@style/routeListItem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
-
-
-                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Киев - Велики Васюки"
-                        android:theme="@style/label1" />
-
-                    <Button
-                        android:id="@+id/button5"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_alignParentRight="true"
-                        android:background="@drawable/btn_radio_shape" />
-
-                </RelativeLayout>
-
-
-            </android.support.v7.widget.CardView>
         </LinearLayout>
 
         <android.support.constraint.ConstraintLayout
