--- a/app/src/main/res/layout/fragment_driver_routes_list.xml
+++ b/app/src/main/res/layout/fragment_driver_routes_list.xml
@@ -57,7 +57,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/btn_radio_shape_checked"
+                android:background="@drawable/btn_route_add"
                 android:src="@android:drawable/ic_input_add"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
