--- a/app/src/main/res/layout/adapter_route_list_item.xml
+++ b/app/src/main/res/layout/adapter_route_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,7 +13,7 @@
         android:layout_marginTop="8dp">
 
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -24,12 +25,12 @@
                 android:text="Киев - Велики Васюки"
                 android:theme="@style/label1" />
 
-            <Button
+            <ImageView
                 android:id="@+id/route_list_status"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_alignParentRight="true"
-                android:background="@drawable/btn_radio_shape" />
+                app:srcCompat="@drawable/btn_radio_shape" />
 
         </RelativeLayout>
 
