--- a/app/src/main/res/layout/fragment_driver_routes_list.xml
+++ b/app/src/main/res/layout/fragment_driver_routes_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dialoga.DriverRoutesListFragment">
+    tools:context=".controls.DriverRoutesListFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
