add inform messages

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="grey">#ECECEC</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
+
+    <color name="informBgDark">#FF8900</color>
+
 </resources>
