--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -15,41 +15,25 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-54dp" />
 
-    <FrameLayout
-        android:id="@+id/lftControls"
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/inform"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true" />
 
 
-    <LinearLayout
-        android:id="@+id/inform_layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#FFFFFF"
-        android:gravity="top"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/map" />
+        <FrameLayout
+            android:id="@+id/lftControls"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/inform" />
 
-    <LinearLayout
-        android:id="@+id/route_layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/controls_layout"
-        android:layout_width="60dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-    </LinearLayout>
-
+    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/btmControls"
@@ -57,8 +41,7 @@
         android:layout_height="wrap_content"
         app:behavior_hideable="false"
         app:behavior_peekHeight="56dp"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"/>
-
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior" />
 
 
 </android.support.design.widget.CoordinatorLayout>
