--- a/app/src/main/res/layout/inform_dialog.xml
+++ b/app/src/main/res/layout/inform_dialog.xml
@@ -19,7 +19,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/dialog_ok_btn"
+            android:id="@+id/driver_location_ok_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
