--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -20,6 +20,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/test_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="266dp"
+            android:text="Button" />
+
         <FrameLayout
             android:id="@+id/inform"
             android:layout_width="match_parent"
@@ -31,7 +39,9 @@
             android:id="@+id/lftControls"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/inform" />
+            android:layout_below="@+id/inform" >
+
+        </FrameLayout>
 
     </RelativeLayout>
 
