--- a/app/src/main/res/layout/adapter_car_list_item.xml
+++ b/app/src/main/res/layout/adapter_car_list_item.xml
@@ -6,32 +6,30 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/route_list_item"
+        android:id="@+id/car_list_item"
         style="@style/routeListItem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent" >
 
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/route_list_name"
+                android:id="@+id/car_list_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Киев - Велики Васюки"
                 android:theme="@style/label1" />
 
             <ImageView
-                android:id="@+id/route_list_status"
+                android:id="@+id/car_list_status"
+                app:srcCompat="@drawable/btn_radio_shape"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_alignParentRight="true"
-                app:srcCompat="@drawable/btn_radio_shape" />
+                android:layout_alignParentRight="true" />
 
         </RelativeLayout>
-
-
     </android.support.v7.widget.CardView>
+
 </LinearLayout>
