--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,7 +46,6 @@
 
 
 
-
     <style name="routeListItem" parent="Theme.AppCompat.Light">
         <item name="cardCornerRadius">5dp</item>
         <item name="cardElevation">2dp</item>
@@ -54,6 +53,7 @@
         <item name="contentPaddingTop">8dp</item>
         <item name="contentPaddingLeft">15dp</item>
         <item name="cardBackgroundColor">@color/white</item>
+        <item name="android:layout_marginTop">10dp</item>
     </style>
 
 
