--- a/app/src/main/res/layout/inform_message.xml
+++ b/app/src/main/res/layout/inform_message.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/inform_message_card"
         style="@style/informDark"
         android:layout_width="match_parent"
@@ -48,6 +48,6 @@
                 android:text="Text" />
 
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
