--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -28,7 +28,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/nav_status"
+        android:id="@+id/nav_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="mail: alexander@mail.com" />
