--- a/app/src/main/res/layout/activity_create_new_car.xml
+++ b/app/src/main/res/layout/activity_create_new_car.xml
@@ -15,85 +15,82 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp">
 
+        <ImageView
+            android:id="@+id/car_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/googleg_standard_color_18" />
+
+        <ImageButton
+            android:id="@+id/car_image_choose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Brand"
-            android:theme="@style/fieldLabel" />
+            android:text="Brand" />
 
         <EditText
             android:id="@+id/car_brand_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_field_bg"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:theme="@style/fieldInput" />
+            android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Model"
-            android:theme="@style/fieldLabel" />
+            android:text="Model" />
 
         <EditText
             android:id="@+id/car_model_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_field_bg"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:theme="@style/fieldInput" />
+            android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Year"
-            android:theme="@style/fieldLabel" />
+            android:text="Year" />
 
         <EditText
             android:id="@+id/car_year_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_field_bg"
             android:ems="10"
-            android:inputType="number"
-            android:theme="@style/fieldInput" />
+            android:inputType="number" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Color"
-            android:theme="@style/fieldLabel" />
+            android:text="Color" />
 
         <EditText
             android:id="@+id/car_color_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_field_bg"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:theme="@style/fieldInput" />
+            android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Number"
-            android:theme="@style/fieldLabel" />
+            android:text="Number" />
 
         <EditText
             android:id="@+id/car_number_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_text_field_bg"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:theme="@style/fieldInput" />
+            android:inputType="textPersonName" />
 
     </LinearLayout>
 
