--- a/app/src/main/res/layout/sheet_passenger_route.xml
+++ b/app/src/main/res/layout/sheet_passenger_route.xml
@@ -51,11 +51,10 @@
                     android:text="Name" />
 
                 <TextView
-                    android:id="@+id/route_status"
+                    android:id="@+id/location_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Status" />
+                    android:layout_weight="1" />
 
                 <TextView
                     android:id="@+id/textView10"
@@ -99,27 +98,19 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <TextView
-                        android:id="@+id/textView15"
+                        android:id="@+id/request_status"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Request already sended" />
+                        android:text="Request on route sended" />
 
                     <TextView
                         android:id="@+id/request_message"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="TextView" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/request_form"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:visibility="visible">
 
                     <EditText
                         android:id="@+id/request_message_inp"
@@ -137,6 +128,13 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Send request" />
+
+                    <Button
+                        android:id="@+id/request_cancel_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Cancel request" />
+
                 </LinearLayout>
 
             </LinearLayout>
