--- a/app/src/main/res/layout/adapter_request_list_item.xml
+++ b/app/src/main/res/layout/adapter_request_list_item.xml
@@ -82,6 +82,12 @@
                 android:layout_height="wrap_content"
                 android:text="Message" />
 
+            <TextView
+                android:id="@+id/request_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Status" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
