--- a/app/src/main/res/layout/sheet_route.xml
+++ b/app/src/main/res/layout/sheet_route.xml
@@ -68,7 +68,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Change car" />
+                    android:text="Change car"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/textView10"
@@ -111,7 +112,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Run" />
+                    android:text="Run"
+                    android:visibility="gone" />
 
                 <LinearLayout
                     android:id="@+id/request_info"
@@ -119,7 +121,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/request_status"
