--- a/app/src/main/res/layout/activity_route_list.xml
+++ b/app/src/main/res/layout/activity_route_list.xml
@@ -10,11 +10,10 @@
         android:layout_height="match_parent">
 
 
-
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/routes_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent" />
 
         <LinearLayout
             android:id="@+id/no_routes_layout"
