--- a/app/src/main/res/layout/activity_car_list.xml
+++ b/app/src/main/res/layout/activity_car_list.xml
@@ -11,12 +11,10 @@
         android:layout_height="match_parent">
 
 
-
-    <ListView
-        android:id="@+id/car_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/car_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <LinearLayout
             android:id="@+id/no_car_layout"
