--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -8,14 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/message_list"
             android:layout_width="match_parent"
-            android:layout_height="629dp"
+            android:layout_height="match_parent"
             android:layout_above="@+id/message_inp"
             android:layout_alignParentTop="true"
             android:layout_marginTop="0dp"
-            android:layout_marginBottom="2dp" />
+            android:layout_marginBottom="2dp"/>
 
         <EditText
             android:id="@+id/message_inp"
