--- a/app/src/main/res/layout/adapter_message_list_item.xml
+++ b/app/src/main/res/layout/adapter_message_list_item.xml
@@ -16,5 +16,5 @@
         android:id="@+id/list_item_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="Time" />
 </LinearLayout>
