--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F8BEBE</color>
+    <color name="colorPrimary">#fff</color>
     <color name="colorPrimaryDark">#FFC107</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="grey">#ECECEC</color>
-    <color name="white">#fff</color>
-    <color name="black">#000</color>
-
-    <color name="informBgDark">#FF8900</color>
-
+    <color name="yellow">#FFC107</color>
+    <color name="white">#FFF</color>
+    <color name="buttonDarkDb">#1f2534</color>
 </resources>
