--- a/app/src/main/res/layout/sheet_passenger.xml
+++ b/app/src/main/res/layout/sheet_passenger.xml
@@ -8,8 +8,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:theme="@style/bottomSheet" >
+        android:layout_height="match_parent" >
 
         <LinearLayout
             android:layout_width="match_parent"
