--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,51 +1,37 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">@color/white</item>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light">
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/grey</item>
     </style>
 
-    <style name="NoActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
 
-    <style name="btnLarge" parent="Theme.AppCompat">
-        <item name="android:textColor">#000</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="colorButtonNormal">@color/colorPrimaryDark</item>
+    <style name="MainLayout" parent="NoActionBar">
+        <item name="android:windowBackground">@color/yellow</item>
     </style>
 
 
-    <!-- bottom sheet -->
-
-
-    <style name="bottomSheet" parent="Theme.AppCompat.Light">
-        <item name="cardCornerRadius">5dp</item>
-        <item name="cardElevation">2dp</item>
-        <item name="contentPadding">10dp</item>
-        <item name="contentPaddingTop">8dp</item>
-        <item name="contentPaddingLeft">15dp</item>
-        <item name="cardBackgroundColor">@color/grey</item>
+    <style name="formButtonDark" >
+        <item name="colorButtonNormal">@color/buttonDarkDb</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 
 
-    <!-- inform messages -->
 
-    <style name="informDark" parent="Theme.AppCompat.Light">
-        <item name="cardBackgroundColor">@color/informBgDark</item>
-        <item name="contentPaddingBottom">10dp</item>
+
+
+
+    <style name="loginBox">
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:padding">10dp</item>
     </style>
 
-
-    <style name="informLabels" parent="Theme.AppCompat.Light">
-        <item name="android:textColor">#000</item>
-        <item name="android:textSize">16sp</item>
-    </style>
 
 
 </resources>
